--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
-        <a href="#">レッスン!!!!</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
+        <a href="#">経済</a>
+        <a href="#">政治</a>
+        <a href="#" class="login">内戦</a>
       </div>
     </div>
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+      <h1>LEARN TO WORLD.<br>LEARN TO BE FUTURE.</h1>
+      <p>この記事は教養として読むべき記事をまとめたものです。<br>初心者にもやさしい解説で、問題点をまとめながら教養を身につけましょう！</p>
       <div class="btn-wrapper">
         <a href="#" class="btn signup">新規登録はこちら</a>
         <p>or</p>
